--- a/server-node/package.json
+++ b/server-node/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pdf-parse": "^2.4.5"
   }
 }
